--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -30,16 +30,16 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-     # - name: Setup Pages
-     #   uses: actions/configure-pages@v5
-     #   with:
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+        with:
           # Automatically inject router.base in your Nuxt configuration file and set
           # target to static (https://nuxtjs.org/docs/configuration-glossary/configuration-target/).
           #
           # You may remove this line if you want to manage the configuration yourself.
-     #     static_site_generator: nuxt
+          static_site_generator: nuxt
       - name: Install dependencies
-        run: npm install 
+        run: npm install
       - name: Static HTML export with Nuxt
         run: npm run generate
       - name: Upload artifact
