chore: bump dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "bloggrify-mistral-demo",
   "type": "module",
   "scripts": {
-    "preinstall": "npx playwright install",
+    "playwright:install": "npx playwright install",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -13,12 +13,12 @@
   "dependencies": {
     "@bloggrify/core": "1.4.0",
     "@bloggrify/mistral": "1.2.1",
-    "nuxt": "3.11.2"
+    "nuxt": "3.12.2"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.2.0",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.56.0",
-    "sass": "1.70.0"
+    "@nuxt/eslint-config": "^0.3.13",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "sass": "1.77.6"
   }
 }
